force-app/main/default/objects/ObjectReferenceIds__c/ObjectReferenceIds__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>For storing SF Ids of custom field etc which need to be referenced by javascript buttons</description>
    <label>Object Reference Ids</label>
</CustomObject>