force-app/main/default/objects/ObjectReferenceIds__c/fields/Account_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Account_Status__c</fullName>
    <label>Account Account Status</label>
    <length>15</length>
    <type>Text</type>
</CustomField>