force-app/main/default/objects/ObjectReferenceIds__c/fields/Account_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Account_Type__c</fullName>
    <label>Account Account Type</label>
    <length>15</length>
    <type>Text</type>
</CustomField>