force-app/main/default/objects/ObjectReferenceIds__c/fields/Account_Commercial_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Account_Commercial_Parent_Account__c</fullName>
    <label>Account Commercial Parent Account</label>
    <length>15</length>
    <type>Text</type>
</CustomField>