force-app/main/default/objects/ObjectReferenceIds__c/fields/Account_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Country__c</fullName>
    <label>Account Country</label>
    <length>15</length>
    <type>Text</type>
</CustomField>