force-app/main/default/objects/ObjectReferenceIds__c/fields/Account_Legal_Parent__c.field-meta.xml
<CustomField>
    <fullName>Account_Legal_Parent__c</fullName>
    <label>Account Legal Parent Account</label>
    <length>15</length>
    <type>Text</type>
</CustomField>