force-app/main/default/objects/ObjectReferenceIds__c/fields/Beneficial_Owner_Active_Registration__c.field-meta.xml
<CustomField>
    <fullName>Beneficial_Owner_Active_Registration__c</fullName>
    <label>Beneficial Owner Active Registration</label>
    <length>15</length>
    <type>Text</type>
</CustomField>