force-app/main/default/objects/ObjectReferenceIds__c/fields/Beneficial_Owner_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>Beneficial_Owner_Object_Id__c</fullName>
    <label>Beneficial Owner Object Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>