force-app/main/default/objects/ObjectReferenceIds__c/fields/Beneficial_Owner_Object_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Beneficial_Owner_Object_Prefix__c</fullName>
    <label>Beneficial Owner Object Prefix</label>
    <length>3</length>
    <type>Text</type>
</CustomField>