force-app/main/default/objects/ObjectReferenceIds__c/fields/Channel_Channel_Account__c.field-meta.xml
<CustomField>
    <fullName>Channel_Channel_Account__c</fullName>
    <label>Channel Channel Account</label>
    <length>15</length>
    <type>Text</type>
</CustomField>