force-app/main/default/objects/ObjectReferenceIds__c/fields/Channel_Object_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Channel_Object_Prefix__c</fullName>
    <label>Channel Object Prefix</label>
    <length>3</length>
    <type>Text</type>
</CustomField>