force-app/main/default/objects/ObjectReferenceIds__c/fields/Director_Object_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Director_Object_Prefix__c</fullName>
    <label>Director Object Prefix</label>
    <length>3</length>
    <type>Text</type>
</CustomField>