force-app/main/default/objects/ObjectReferenceIds__c/fields/Director_Registration__c.field-meta.xml
<CustomField>
    <fullName>Director_Registration__c</fullName>
    <label>Director Registration</label>
    <length>15</length>
    <type>Text</type>
</CustomField>