force-app/main/default/objects/ObjectReferenceIds__c/fields/PEP_Beneficial_Owner__c.field-meta.xml
<CustomField>
    <fullName>PEP_Beneficial_Owner__c</fullName>
    <label>PEP Beneficial Owner</label>
    <length>15</length>
    <type>Text</type>
</CustomField>