force-app/main/default/objects/ObjectReferenceIds__c/fields/PEP_Director__c.field-meta.xml
<CustomField>
    <fullName>PEP_Director__c</fullName>
    <label>PEP Director</label>
    <length>15</length>
    <type>Text</type>
</CustomField>