force-app/main/default/objects/ObjectReferenceIds__c/fields/PEP_Object_Prefix__c.field-meta.xml
<CustomField>
    <fullName>PEP_Object_Prefix__c</fullName>
    <label>PEP Object Prefix</label>
    <length>3</length>
    <type>Text</type>
</CustomField>