force-app/main/default/objects/ObjectReferenceIds__c/fields/PEP_Registration__c.field-meta.xml
<CustomField>
    <fullName>PEP_Registration__c</fullName>
    <label>PEP Registration</label>
    <length>15</length>
    <type>Text</type>
</CustomField>