force-app/main/default/objects/ObjectReferenceIds__c/fields/Service_Provider_Account__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Account__c</fullName>
    <label>Service Provider Account</label>
    <length>15</length>
    <type>Text</type>
</CustomField>