force-app/main/default/objects/ObjectReferenceIds__c/fields/Service_Provider_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Account_Name__c</fullName>
    <label>Service Provider Account Name</label>
    <length>15</length>
    <type>Text</type>
</CustomField>