force-app/main/default/objects/ObjectReferenceIds__c/fields/Service_Provider_Object_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Object_Prefix__c</fullName>
    <label>Service Provider Object Prefix</label>
    <length>3</length>
    <type>Text</type>
</CustomField>