force-app/main/default/objects/ObjectReferenceIds__c/fields/Verification_Beneficial_Owner__c.field-meta.xml
<CustomField>
    <fullName>Verification_Beneficial_Owner__c</fullName>
    <label>Verification Beneficial Owner</label>
    <length>15</length>
    <type>Text</type>
</CustomField>