force-app/main/default/objects/ObjectReferenceIds__c/fields/Verification_Director__c.field-meta.xml
<CustomField>
    <fullName>Verification_Director__c</fullName>
    <label>Verification Director</label>
    <length>15</length>
    <type>Text</type>
</CustomField>