force-app/main/default/objects/ObjectReferenceIds__c/fields/Verification_Object_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Verification_Object_Prefix__c</fullName>
    <label>Verification Object Prefix</label>
    <length>3</length>
    <type>Text</type>
</CustomField>