force-app/main/default/objects/ObjectReferenceIds__c/fields/Verification_Registration__c.field-meta.xml
<CustomField>
    <fullName>Verification_Registration__c</fullName>
    <label>Verification Registration</label>
    <length>15</length>
    <type>Text</type>
</CustomField>